<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SecondaryActivity" android:paddingTop="48dp" android:paddingBottom="48dp">

    <TextView
            android:text="@string/body_mass_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/bodyMassIndexTextView" android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"/>
    <TextView
            android:text="@string/goal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/goalTextView" android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/bodyMassIndexTextView"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@id/goalTextView" android:id="@+id/goalRadioGroup"
            android:layout_marginTop="8dp">
        <RadioButton
                android:text="@string/goal_weight_loss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/weightLossRadioButton"/>
        <RadioButton
                android:text="@string/goal_maintaining_current_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/maintainingCurrentWeightRadioButton"/>
        <RadioButton
                android:text="@string/goal_weight_gain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/weightGainRadioButton"/>
    </RadioGroup>
    <Button
            android:text="@string/_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/continueButtonNext"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp" android:enabled="false"
            android:insetTop="0dp" android:insetBottom="0dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/goalRadioGroup" app:layout_constraintHorizontal_bias="0.498"/>
</androidx.constraintlayout.widget.ConstraintLayout>