<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical" android:paddingBottom="24dp" android:paddingTop="48dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:text="@string/welcome"
                        android:layout_width="match_parent"
                        android:layout_height="0dp" android:id="@+id/welcomeTextView"
                        android:textAlignment="center" android:textSize="34sp" app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                />
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        app:layout_constraintTop_toBottomOf="@id/welcomeTextView"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
                        android:layout_marginTop="32dp" android:id="@+id/usernameTextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/input_username" android:id="@+id/usernameTextInput"
                    />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        app:layout_constraintTop_toBottomOf="@id/usernameTextInputLayout"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp" android:id="@+id/ageTextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/input_age" android:id="@+id/ageTextInput" android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        app:layout_constraintTop_toBottomOf="@id/ageTextInputLayout" android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
                        android:id="@+id/heightTextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/input_height" android:id="@+id/heightTextInput"
                            android:inputType="numberDecimal"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:id="@+id/weightTextInputLayout" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/heightTextInputLayout"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginStart="24dp" android:layout_marginEnd="24dp">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/input_weight" android:id="@+id/weightTextInput"
                            android:inputType="numberDecimal"/>
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                        android:text="@string/lifestyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/lifestyleTextView" android:textSize="16sp"
                        app:layout_constraintTop_toBottomOf="@+id/weightTextInputLayout"
                        android:layout_marginTop="32dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="24dp"/>
                <RadioGroup
                        android:layout_width="0dp"
                        android:layout_height="match_parent" android:id="@+id/lifestyleRadioGroup"
                        app:layout_constraintTop_toBottomOf="@+id/lifestyleTextView" android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                >
                    <RadioButton
                            android:text="@string/lifestyle_sedentary"
                            android:layout_width="wrap_content"
                            android:id="@+id/sedentaryRadioButton"
                            android:textSize="16sp"
                            android:layout_height="wrap_content"/>
                    <RadioButton
                            android:text="@string/lifestyle_inactive"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/inactiveRadioButton"
                            android:textSize="16sp"/>
                    <RadioButton
                            android:text="@string/lifestyle_active"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/activeRadioButton"
                            android:textSize="16sp"/>
                    <RadioButton
                            android:text="@string/lifestyle_very_active"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/veryActiveRadioButton"
                            android:textSize="16sp"/>
                </RadioGroup>
                <Button
                        android:text="@string/_continue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/continueButton"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/lifestyleRadioGroup"
                        android:padding="16dp" android:enabled="false"
                        android:insetTop="0dp" android:insetBottom="0dp" android:layout_marginTop="32dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>